<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    android:padding="8dp"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <Switch
        android:id="@+id/switch_darkmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_button"
        android:padding="15dp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/message_item_text_large"
        android:theme="@style/SelectionSwitch"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/label_darkmode"/>

    <Switch
        android:id="@+id/switch_notification"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/shape_white_button"
        android:textSize="@dimen/message_item_text_large"
        android:theme="@style/SelectionSwitch"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/label_notification"/>


    <Switch
        android:id="@+id/switch_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/shape_white_button"
        android:textSize="@dimen/message_item_text_large"
        android:theme="@style/SelectionSwitch"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/label_passcode_lock"/>


</LinearLayout>